# code-editor-prototype

./: .gitignore  Cargo.toml  README.md
queries/: highlights.scm
src/: lib.rs
src/core/: buffer.rs  document.rs  document_change.rs  mod.rs  position.rs  selection.rs  window.rs
src/highlighter/: color_selector.rs  mod.rs
src/lsp/: client.rs  connect.rs  error.rs  mod.rs  response.rs  transport.rs
src/styles/: button.rs  container.rs  mod.rs  text.rs
src/widgets/: layout.rs  main_view.rs  mod.rs  textbox.rs  textbox_container.rs  view_port.rs
src/widgets/floating_text/: floating_overlay.rs  floating_text_element.rs  mod.rs
src/widgets/modal/: file_selector.rs  mod.rs  modal_overlay.rs
