[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.10.0", features = ["lazy", "advanced", "canvas", "debug"]}
iced_style = "0.9.0"
ropey = "1.6.0"
unicode-segmentation = "1"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
futures = "0.3.28"
jsonrpc-lite = "0.6.0"
lsp-types = "0.94.1"
serde = "1.0.189"
serde_json = "1.0.107"
smol = "1.3.0"
thiserror = "1.0.51"
rfd = "0.12.1"
fuzzy-matcher = "*"

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "application"
path = "src/bin/main.rs"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build-dependencies]
# cc="*"
